Corrected misaligned key-addition input field in popup

--- a/ProducTube/styles.css
+++ b/ProducTube/styles.css
@@ -176,6 +176,12 @@ p{
   color: white;
 } */
 
+.keyword-adder-container{
+  padding-left: .5rem;
+}
+
+
+
 
 
 
